Add Mission Control run console and demo bundle
